--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": false,
   "author": {
-    "email": "sshrivatava@yodlee.com",
-    "name": "Shreyans Shrivastava"
+    "email": "shreyansRS@gmail.com",
+    "name": "Shreyans"
   },
   "contributors": [],
   "dependencies": {
